commit translated contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemloadoptions.yml
@@ -1,91 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions:interface'
-    summary: |-
-      表示 Excel PivotItem。
+### YamlMime:TSType
+name: Excel.Interfaces.PivotItemLoadOptions
+uid: excel!Excel.Interfaces.PivotItemLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.PivotItemLoadOptions
+summary: >-
+  表示 Excel PivotItem。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.PivotItemLoadOptions
-    fullName: Excel.Interfaces.PivotItemLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotItemLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.PivotItemLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.PivotItemLoadOptions#isExpanded:member'
-      - 'excel!Excel.Interfaces.PivotItemLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.PivotItemLoadOptions#visible:member'
-  - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#id:member'
-    summary: |-
-      PivotItem 的 ID。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#isExpanded:member'
-    summary: |-
-      确定是展开项以显示子项还是折叠项并隐藏子项。
+  \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.PivotItemLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.PivotItemLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    PivotItem 的 ID。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: isExpanded
-    fullName: isExpanded
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isExpanded?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#name:member'
-    summary: |-
-      PivotItem 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#visible:member'
-    summary: |-
-      指定 PivotItem 是否可见。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: isExpanded
+  uid: excel!Excel.Interfaces.PivotItemLoadOptions#isExpanded:member
+  package: excel!
+  fullName: isExpanded
+  summary: >-
+    确定是展开项以显示子项还是折叠项并隐藏子项。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isExpanded?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.PivotItemLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    PivotItem 的名称。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: visible
+  uid: excel!Excel.Interfaces.PivotItemLoadOptions#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定 PivotItem 是否可见。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: f57a3ea7df6b18b6e717d985effea610eccfcdb1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330605"
