--- a/docs/docs-ref-autogen/office/office/office.control.yml
+++ b/docs/docs-ref-autogen/office/office/office.control.yml
@@ -1,50 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.Control:interface'
-    summary: 代表单个控件或命令以及它应具有的状态。
-    name: Office.Control
-    fullName: Office.Control
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!Office.Control#enabled:member'
-      - 'office!Office.Control#id:member'
-      - 'office!Office.Control#visible:member'
-  - uid: 'office!Office.Control#enabled:member'
-    summary: 指示是否应启用或禁用控件。 默认值为 true。
-    name: enabled
-    fullName: enabled
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'enabled?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'office!Office.Control#id:member'
-    summary: 清单中指定的控件标识符。
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id: string;'
-      return:
-        type:
-          - string
-  - uid: 'office!Office.Control#visible:member'
-    summary: 指示控件是可见还是隐藏。 默认值为 true。
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+### YamlMime:TSType
+name: Office.Control
+uid: office!Office.Control:interface
+package: office!
+fullName: Office.Control
+summary: 代表单个控件或命令以及它应具有的状态。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: enabled
+  uid: office!Office.Control#enabled:member
+  package: office!
+  fullName: enabled
+  summary: 指示是否应启用或禁用控件。 默认值为 true。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'enabled?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: office!Office.Control#id:member
+  package: office!
+  fullName: id
+  summary: 清单中指定的控件标识符。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id: string;'
+    return:
+      type: string
+- name: visible
+  uid: office!Office.Control#visible:member
+  package: office!
+  fullName: visible
+  summary: 指示控件是可见还是隐藏。 默认值为 true。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: df3419b84e99a1dc57148bcde449639511811dce
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329584"
