--- a/docs/docs-ref-autogen/office/office/office.customxmlnodetype.yml
+++ b/docs/docs-ref-autogen/office/office/office.customxmlnodetype.yml
@@ -1,67 +1,45 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.CustomXMLNodeType:enum'
-    summary: 指定 XML 节点的类型。
-    name: Office.CustomXMLNodeType
-    fullName: Office.CustomXMLNodeType
-    langs:
-      - typeScript
-    type: enum
-    package: office!
-    children:
-      - 'office!Office.CustomXMLNodeType.Attribute:member'
-      - 'office!Office.CustomXMLNodeType.CData:member'
-      - 'office!Office.CustomXMLNodeType.Element:member'
-      - 'office!Office.CustomXMLNodeType.NodeComment:member'
-      - 'office!Office.CustomXMLNodeType.NodeDocument:member'
-      - 'office!Office.CustomXMLNodeType.ProcessingInstruction:member'
-      - 'office!Office.CustomXMLNodeType.Text:member'
-  - uid: 'office!Office.CustomXMLNodeType.Attribute:member'
-    summary: 节点为属性。
-    name: Attribute
-    fullName: Attribute
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.CustomXMLNodeType.CData:member'
-    summary: 节点是 CData。
-    name: CData
-    fullName: CData
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.CustomXMLNodeType.Element:member'
-    summary: 节点为元素。
-    name: Element
-    fullName: Element
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.CustomXMLNodeType.NodeComment:member'
-    summary: 节点为注释。
-    name: NodeComment
-    fullName: NodeComment
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.CustomXMLNodeType.NodeDocument:member'
-    summary: 节点为 Document 元素。
-    name: NodeDocument
-    fullName: NodeDocument
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.CustomXMLNodeType.ProcessingInstruction:member'
-    summary: 节点为处理指令。
-    name: ProcessingInstruction
-    fullName: ProcessingInstruction
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.CustomXMLNodeType.Text:member'
-    summary: 节点为文本。
-    name: Text
-    fullName: Text
-    langs:
-      - typeScript
-    type: field
+### YamlMime:TSEnum
+name: Office.CustomXMLNodeType
+uid: office!Office.CustomXMLNodeType:enum
+package: office!
+fullName: Office.CustomXMLNodeType
+summary: 指定 XML 节点的类型。
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: Attribute
+  uid: office!Office.CustomXMLNodeType.Attribute:member
+  package: office!
+  summary: 节点为属性。
+- name: CData
+  uid: office!Office.CustomXMLNodeType.CData:member
+  package: office!
+  summary: 节点是 CData。
+- name: Element
+  uid: office!Office.CustomXMLNodeType.Element:member
+  package: office!
+  summary: 节点为元素。
+- name: NodeComment
+  uid: office!Office.CustomXMLNodeType.NodeComment:member
+  package: office!
+  summary: 节点为注释。
+- name: NodeDocument
+  uid: office!Office.CustomXMLNodeType.NodeDocument:member
+  package: office!
+  summary: 节点为 Document 元素。
+- name: ProcessingInstruction
+  uid: office!Office.CustomXMLNodeType.ProcessingInstruction:member
+  package: office!
+  summary: 节点为处理指令。
+- name: Text
+  uid: office!Office.CustomXMLNodeType.Text:member
+  package: office!
+  summary: 节点为文本。
+metadata:
+  ms.openlocfilehash: 9862c62db86147beacfa1079c5005e4b97bfe5ae
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329570"
