--- a/docs/docs-ref-autogen/office/office/office.gotobyidoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.gotobyidoptions.yml
@@ -1,55 +1,52 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.GoToByIdOptions:interface'
-    summary: 提供用于决定是否要选择导航到的位置的选项。
-    remarks: |-
-      [SelectionMode](xref:office!Office.SelectionMode:enum)选项导致的行为因主机而异：
+### YamlMime:TSType
+name: Office.GoToByIdOptions
+uid: office!Office.GoToByIdOptions:interface
+package: office!
+fullName: Office.GoToByIdOptions
+summary: 提供用于决定是否要选择导航到的位置的选项。
+remarks: >-
+  [SelectionMode](xref:office!Office.SelectionMode:enum)选项导致的行为因主机而异：
 
-      在 Excel 中： `Office.SelectionMode.Selected` 选择绑定或已命名项目中的所有内容。 `Office.SelectionMode.None`对于文本绑定，选择单元格;对于矩阵绑定、表绑定和已命名项目，选择第一个数据单元格（不是表的标题行中的第一个单元格）。
 
-      在 PowerPoint 中： `Office.SelectionMode.Selected` 选择幻灯片标题或幻灯片上的第一个文本框。 `Office.SelectionMode.None`不会选择任何内容。
+  在 Excel 中： `Office.SelectionMode.Selected` 选择绑定或已命名项目中的所有内容。 `Office.SelectionMode.None` 对于文本绑定，选择单元格;对于矩阵绑定、表绑定和已命名项目，选择第一个数据单元格 (表的标题行中的第一个单元格) 。
 
-      在 Word 中： `Office.SelectionMode.Selected` 选择绑定中的所有内容。 `Office.SelectionMode.None`对于文本绑定，将光标移至文本的开头;对于矩阵绑定和表绑定，选择第一个数据单元格（不是表的标题行中的第一个单元格）。
-    name: Office.GoToByIdOptions
-    fullName: Office.GoToByIdOptions
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!Office.GoToByIdOptions#asyncContext:member'
-      - 'office!Office.GoToByIdOptions#selectionMode:member'
-  - uid: 'office!Office.GoToByIdOptions#asyncContext:member'
-    summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
-    name: asyncContext
-    fullName: asyncContext
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'asyncContext?: any'
-      return:
-        type:
-          - any
-  - uid: 'office!Office.GoToByIdOptions#selectionMode:member'
-    summary: '指定是否选择（突出显示）由 id 参数指定的位置。 使用[SelectionMode](xref:office!Office.SelectionMode:enum)或等效字符串。 有关详细信息，请参阅 "备注"。'
-    name: selectionMode
-    fullName: selectionMode
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'selectionMode?: Office.SelectionMode | string'
-      return:
-        type:
-          - 'office!Office.GoToByIdOptions#selectionMode~0:complex'
-references:
-  - uid: 'office!Office.GoToByIdOptions#selectionMode~0:complex'
-    name: Office.SelectionMode | string
-    fullName: Office.SelectionMode | string
-    spec.typeScript:
-      - uid: 'office!Office.SelectionMode:enum'
-        name: Office.SelectionMode
-        fullName: Office.SelectionMode
-      - name: ' | string'
-        fullName: ' | string'
+
+  在 PowerPoint 中： `Office.SelectionMode.Selected` 选择幻灯片标题或幻灯片上的第一个文本框。 `Office.SelectionMode.None` 不会选择任何内容。
+
+
+  在 Word 中： `Office.SelectionMode.Selected` 选择绑定中的所有内容。 `Office.SelectionMode.None` 对于文本绑定，将光标移至文本的开头;对于矩阵绑定和表绑定，选择第一个数据单元格 () 的表的标题行中的第一个单元格。
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: asyncContext
+  uid: office!Office.GoToByIdOptions#asyncContext:member
+  package: office!
+  fullName: asyncContext
+  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'asyncContext?: any'
+    return:
+      type: any
+- name: selectionMode
+  uid: office!Office.GoToByIdOptions#selectionMode:member
+  package: office!
+  fullName: selectionMode
+  summary: 指定是否选中 id 参数指定的位置 (突出显示) 。 使用 [SelectionMode](xref:office!Office.SelectionMode:enum) 或等效字符串。 有关详细信息，请参阅 "备注"。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'selectionMode?: Office.SelectionMode | string'
+    return:
+      type: <xref uid="office!Office.SelectionMode:enum" /> | string
+metadata:
+  ms.openlocfilehash: 796d97654c244982fee500572faac74fe7ebd5d3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329514"
