--- a/docs/docs-ref-autogen/office/office/office.index.yml
+++ b/docs/docs-ref-autogen/office/office/office.index.yml
@@ -1,43 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.Index:enum'
-    summary: 指定相对的 PowerPoint 幻灯片。
-    name: Office.Index
-    fullName: Office.Index
-    langs:
-      - typeScript
-    type: enum
-    package: office!
-    children:
-      - 'office!Office.Index.First:member'
-      - 'office!Office.Index.Last:member'
-      - 'office!Office.Index.Next:member'
-      - 'office!Office.Index.Previous:member'
-  - uid: 'office!Office.Index.First:member'
-    summary: 代表第一张 PowerPoint 幻灯片
-    name: First
-    fullName: First
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.Index.Last:member'
-    summary: 代表最后一张 PowerPoint 幻灯片
-    name: Last
-    fullName: Last
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.Index.Next:member'
-    summary: 代表下一张 PowerPoint 幻灯片
-    name: Next
-    fullName: Next
-    langs:
-      - typeScript
-    type: field
-  - uid: 'office!Office.Index.Previous:member'
-    summary: 代表上一张 PowerPoint 幻灯片
-    name: Previous
-    fullName: Previous
-    langs:
-      - typeScript
-    type: field
+### YamlMime:TSEnum
+name: Office.Index
+uid: office!Office.Index:enum
+package: office!
+fullName: Office.Index
+summary: 指定相对的 PowerPoint 幻灯片。
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: First
+  uid: office!Office.Index.First:member
+  package: office!
+  summary: 代表第一张 PowerPoint 幻灯片
+- name: Last
+  uid: office!Office.Index.Last:member
+  package: office!
+  summary: 代表最后一张 PowerPoint 幻灯片
+- name: Next
+  uid: office!Office.Index.Next:member
+  package: office!
+  summary: 代表下一张 PowerPoint 幻灯片
+- name: Previous
+  uid: office!Office.Index.Previous:member
+  package: office!
+  summary: 代表上一张 PowerPoint 幻灯片
+metadata:
+  ms.openlocfilehash: f8733a42dbb1b60f6442e427c6f80232e4364190
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329507"
