--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.imageloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.imageloadoptions.yml
@@ -1,159 +1,162 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions:interface'
-    summary: |-
-      表示 Image。 Image 可以是 PageContent 对象或 Paragraph 对象的直接子级。
+### YamlMime:TSType
+name: OneNote.Interfaces.ImageLoadOptions
+uid: onenote!OneNote.Interfaces.ImageLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.ImageLoadOptions
+summary: >-
+  表示 Image。 Image 可以是 PageContent 对象或 Paragraph 对象的直接子级。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.ImageLoadOptions
-    fullName: OneNote.Interfaces.ImageLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#description:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#height:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#hyperlink:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#ocrData:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#pageContent:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#paragraph:member'
-      - 'onenote!OneNote.Interfaces.ImageLoadOptions#width:member'
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#description:member'
-    summary: |-
-      获取或设置 Image 的说明。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: description
-    fullName: description
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'description?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#height:member'
-    summary: |-
-      获取或设置 Image 布局的高度。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: description
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#description:member
+  package: onenote!
+  fullName: description
+  summary: >-
+    获取或设置 Image 的说明。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#hyperlink:member'
-    summary: |-
-      获取或设置 Image 的超链接。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: hyperlink
-    fullName: hyperlink
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'hyperlink?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#id:member'
-    summary: |-
-      获取“图像”对象的 ID。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'description?: boolean;'
+    return:
+      type: boolean
+- name: height
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#height:member
+  package: onenote!
+  fullName: height
+  summary: >-
+    获取或设置 Image 布局的高度。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#ocrData:member'
-    summary: |-
-      获取由此 Image 的 OCR（光学字符识别）获取的数据，如 OCR 文本和语言。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: ocrData
-    fullName: ocrData
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'ocrData?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#pageContent:member'
-    summary: |-
-      获取包含 Image 的 PageContent 对象。 如果 Image 不是 PageContent 的直接子级，则引发。 此对象定义页面上的 Image 位置。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: boolean;'
+    return:
+      type: boolean
+- name: hyperlink
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#hyperlink:member
+  package: onenote!
+  fullName: hyperlink
+  summary: >-
+    获取或设置 Image 的超链接。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: pageContent
-    fullName: pageContent
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'pageContent?: OneNote.Interfaces.PageContentLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageContentLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#paragraph:member'
-    summary: |-
-      获取包含 Image 的 Paragraph 对象。 如果 Image 不是 Paragraph 的直接子级，则引发。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: OneNote.Interfaces.ParagraphLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.ImageLoadOptions#width:member'
-    summary: |-
-      获取或设置 Image 布局的宽度。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'hyperlink?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取“图像”对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.PageContentLoadOptions:interface'
-    name: OneNote.Interfaces.PageContentLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.ParagraphLoadOptions:interface'
-    name: OneNote.Interfaces.ParagraphLoadOptions
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: ocrData
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#ocrData:member
+  package: onenote!
+  fullName: ocrData
+  summary: >-
+    获取由此 Image 的 OCR（光学字符识别）获取的数据，如 OCR 文本和语言。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'ocrData?: boolean;'
+    return:
+      type: boolean
+- name: pageContent
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#pageContent:member
+  package: onenote!
+  fullName: pageContent
+  summary: >-
+    获取包含 Image 的 PageContent 对象。 如果 Image 不是 PageContent 的直接子级，则引发。 此对象定义页面上的 Image 位置。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'pageContent?: OneNote.Interfaces.PageContentLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageContentLoadOptions:interface" />
+- name: paragraph
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#paragraph:member
+  package: onenote!
+  fullName: paragraph
+  summary: >-
+    获取包含 Image 的 Paragraph 对象。 如果 Image 不是 Paragraph 的直接子级，则引发。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: OneNote.Interfaces.ParagraphLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphLoadOptions:interface" />
+- name: width
+  uid: onenote!OneNote.Interfaces.ImageLoadOptions#width:member
+  package: onenote!
+  fullName: width
+  summary: >-
+    获取或设置 Image 布局的宽度。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: d476a17b91400ebd1b4a9955886b63ee5b6be957
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329437"
