--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysiswordcollectiondata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysiswordcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionData:interface'
-    summary: 描述通过调用 "inkAnalysisWordCollection （）" 返回的数据的接口。
-    name: OneNote.Interfaces.InkAnalysisWordCollectionData
-    fullName: OneNote.Interfaces.InkAnalysisWordCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.InkAnalysisWordData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionData#items~0:complex'
-    name: 'OneNote.Interfaces.InkAnalysisWordData[]'
-    fullName: 'OneNote.Interfaces.InkAnalysisWordData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordData:interface'
-        name: OneNote.Interfaces.InkAnalysisWordData
-        fullName: OneNote.Interfaces.InkAnalysisWordData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisWordCollectionData
+uid: onenote!OneNote.Interfaces.InkAnalysisWordCollectionData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisWordCollectionData
+summary: '一个接口，该接口描述通过调用 "inkAnalysisWordCollection ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordCollectionData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.InkAnalysisWordData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisWordData:interface" />[]
+metadata:
+  ms.openlocfilehash: 25ca1a341cc2897008da4d07e2b5e27374c12074
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329381"
