--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysiswordloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysiswordloadoptions.yml
@@ -1,109 +1,114 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions:interface'
-    summary: |-
-      表示墨迹笔划形成的已识别字词的墨迹分析数据。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisWordLoadOptions
+uid: onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisWordLoadOptions
+summary: >-
+  表示墨迹笔划形成的已识别字词的墨迹分析数据。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.InkAnalysisWordLoadOptions
-    fullName: OneNote.Interfaces.InkAnalysisWordLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#languageId:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#line:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#strokePointers:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#wordAlternates:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#id:member'
-    summary: |-
-      获取 InkAnalysisWord 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#languageId:member'
-    summary: |-
-      此 inkAnalysisWord 中已识别语言的 ID。 只读。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkAnalysisWord 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: languageId
-    fullName: languageId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'languageId?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#line:member'
-    summary: |-
-      对父级 InkAnalysisLine 的引用。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: line
-    fullName: line
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'line?: OneNote.Interfaces.InkAnalysisLineLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#strokePointers:member'
-    summary: |-
-      对已识别为此墨迹分析字词一部分的墨迹笔划的弱引用。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: languageId
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#languageId:member
+  package: onenote!
+  fullName: languageId
+  summary: >-
+    此 inkAnalysisWord 中已识别语言的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: strokePointers
-    fullName: strokePointers
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'strokePointers?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#wordAlternates:member'
-    summary: |-
-      按照可能性的顺序，已在此墨迹字词中识别的字词。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: wordAlternates
-    fullName: wordAlternates
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'wordAlternates?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions:interface'
-    name: OneNote.Interfaces.InkAnalysisLineLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'languageId?: boolean;'
+    return:
+      type: boolean
+- name: line
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#line:member
+  package: onenote!
+  fullName: line
+  summary: >-
+    对父级 InkAnalysisLine 的引用。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'line?: OneNote.Interfaces.InkAnalysisLineLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisLineLoadOptions:interface" />
+- name: strokePointers
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#strokePointers:member
+  package: onenote!
+  fullName: strokePointers
+  summary: >-
+    对已识别为此墨迹分析字词一部分的墨迹笔划的弱引用。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'strokePointers?: boolean;'
+    return:
+      type: boolean
+- name: wordAlternates
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordLoadOptions#wordAlternates:member
+  package: onenote!
+  fullName: wordAlternates
+  summary: >-
+    按照可能性的顺序，已在此墨迹字词中识别的字词。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'wordAlternates?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: f888feb691046c7ef91f71803c659d86c9505bc0
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329346"
