--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkstrokecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkstrokecollectionloadoptions.yml
@@ -1,61 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions:interface'
-    summary: |-
-      表示 InkStroke 对象的集合。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkStrokeCollectionLoadOptions
+uid: onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkStrokeCollectionLoadOptions
+summary: >-
+  表示 InkStroke 对象的集合。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.InkStrokeCollectionLoadOptions
-    fullName: OneNote.Interfaces.InkStrokeCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#floatingInk:member'
-      - 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#id:member'
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#floatingInk:member'
-    summary: |-
-      对于集合中的每一项：获取 InkStroke 对象的 ID。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: floatingInk
-    fullName: floatingInk
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'floatingInk?: OneNote.Interfaces.FloatingInkLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#id:member'
-    summary: |-
-      对于集合中的每一项：获取 InkStroke 对象的 ID。 只读。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: floatingInk
+  uid: onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#floatingInk:member
+  package: onenote!
+  fullName: floatingInk
+  summary: >-
+    对于集合中的每一项：获取 InkStroke 对象的 ID。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface'
-    name: OneNote.Interfaces.FloatingInkLoadOptions
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'floatingInk?: OneNote.Interfaces.FloatingInkLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface" />
+- name: id
+  uid: onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    对于集合中的每一项：获取 InkStroke 对象的 ID。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 1d403eaf7cd4cc4b2a0ec108346ff55e480ecd5e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329318"
