--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkstrokedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkstrokedata.yml
@@ -1,46 +1,50 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeData:interface'
-    summary: 描述通过调用 "inkStroke （）" 返回的数据的接口。
-    name: OneNote.Interfaces.InkStrokeData
-    fullName: OneNote.Interfaces.InkStrokeData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkStrokeData#floatingInk:member'
-      - 'onenote!OneNote.Interfaces.InkStrokeData#id:member'
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeData#floatingInk:member'
-    summary: |-
-      获取 InkStroke 对象的 ID。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkStrokeData
+uid: onenote!OneNote.Interfaces.InkStrokeData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkStrokeData
+summary: '一个接口，该接口描述通过调用 "inkStroke ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: floatingInk
+  uid: onenote!OneNote.Interfaces.InkStrokeData#floatingInk:member
+  package: onenote!
+  fullName: floatingInk
+  summary: >-
+    获取 InkStroke 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: floatingInk
-    fullName: floatingInk
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'floatingInk?: OneNote.Interfaces.FloatingInkData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.FloatingInkData:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeData#id:member'
-    summary: |-
-      获取 InkStroke 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkData:interface'
-    name: OneNote.Interfaces.FloatingInkData
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'floatingInk?: OneNote.Interfaces.FloatingInkData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.FloatingInkData:interface" />
+- name: id
+  uid: onenote!OneNote.Interfaces.InkStrokeData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkStroke 对象的 ID。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 2177762e2387d696122e512b87fa90e6bd8ccb8d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329311"
