--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkwordloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkwordloadoptions.yml
@@ -1,93 +1,98 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkWordLoadOptions:interface'
-    summary: |-
-      段落字词中的墨迹容器。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkWordLoadOptions
+uid: onenote!OneNote.Interfaces.InkWordLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkWordLoadOptions
+summary: >-
+  段落字词中的墨迹容器。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.InkWordLoadOptions
-    fullName: OneNote.Interfaces.InkWordLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkWordLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.InkWordLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.InkWordLoadOptions#languageId:member'
-      - 'onenote!OneNote.Interfaces.InkWordLoadOptions#paragraph:member'
-      - 'onenote!OneNote.Interfaces.InkWordLoadOptions#wordAlternates:member'
-  - uid: 'onenote!OneNote.Interfaces.InkWordLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkWordLoadOptions#id:member'
-    summary: |-
-      获取 InkWord 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkWordLoadOptions#languageId:member'
-    summary: |-
-      该墨迹字词中已识别语言的 ID。 只读。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.InkWordLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.InkWordLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkWord 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: languageId
-    fullName: languageId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'languageId?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkWordLoadOptions#paragraph:member'
-    summary: |-
-      包含墨迹字词的父段落。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraph
-    fullName: paragraph
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraph?: OneNote.Interfaces.ParagraphLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkWordLoadOptions#wordAlternates:member'
-    summary: |-
-      按照可能性的顺序，已在此墨迹字词中识别的字词。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: languageId
+  uid: onenote!OneNote.Interfaces.InkWordLoadOptions#languageId:member
+  package: onenote!
+  fullName: languageId
+  summary: >-
+    该墨迹字词中已识别语言的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: wordAlternates
-    fullName: wordAlternates
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'wordAlternates?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'onenote!OneNote.Interfaces.ParagraphLoadOptions:interface'
-    name: OneNote.Interfaces.ParagraphLoadOptions
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'languageId?: boolean;'
+    return:
+      type: boolean
+- name: paragraph
+  uid: onenote!OneNote.Interfaces.InkWordLoadOptions#paragraph:member
+  package: onenote!
+  fullName: paragraph
+  summary: >-
+    包含墨迹字词的父段落。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraph?: OneNote.Interfaces.ParagraphLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphLoadOptions:interface" />
+- name: wordAlternates
+  uid: onenote!OneNote.Interfaces.InkWordLoadOptions#wordAlternates:member
+  package: onenote!
+  fullName: wordAlternates
+  summary: >-
+    按照可能性的顺序，已在此墨迹字词中识别的字词。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'wordAlternates?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 55c53e5d4c4309e9582d4b01cd004529caf831ec
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329304"
