--- a/docs/docs-ref-autogen/outlook/outlook/office.officethemechangedeventargs.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.officethemechangedeventargs.yml
@@ -1,52 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.OfficeThemeChangedEventArgs:interface'
-    summary: |-
-      提供已更新的 Office 主题，以引发该 `Office.EventType.OfficeThemeChanged` 事件。
+### YamlMime:TSType
+name: Office.OfficeThemeChangedEventArgs
+uid: outlook!Office.OfficeThemeChangedEventArgs:interface
+package: outlook!
+fullName: Office.OfficeThemeChangedEventArgs
+summary: >-
+  提供已更新的 Office 主题，以引发该 `Office.EventType.OfficeThemeChanged` 事件。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    isPreview: true
-    name: Office.OfficeThemeChangedEventArgs
-    fullName: Office.OfficeThemeChangedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.OfficeThemeChangedEventArgs#officeTheme:member'
-      - 'outlook!Office.OfficeThemeChangedEventArgs#type:member'
-  - uid: 'outlook!Office.OfficeThemeChangedEventArgs#officeTheme:member'
-    summary: |-
-      获取已更新的 Office 主题。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    isPreview: true
-    name: officeTheme
-    fullName: officeTheme
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'officeTheme: Office.OfficeTheme;'
-      return:
-        type:
-          - 'office!Office.OfficeTheme:interface'
-  - uid: 'outlook!Office.OfficeThemeChangedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
+  \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+remarks: ''
+isPreview: true
+isDeprecated: false
+type: interface
+properties:
+- name: officeTheme
+  uid: outlook!Office.OfficeThemeChangedEventArgs#officeTheme:member
+  package: outlook!
+  fullName: officeTheme
+  summary: >-
+    获取已更新的 Office 主题。
 
-      \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    isPreview: true
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "officeThemeChanged";'
-      return:
-        type:
-          - '"officeThemeChanged"'
-references:
-  - uid: 'office!Office.OfficeTheme:interface'
-    name: Office.OfficeTheme
+
+    \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'officeTheme: Office.OfficeTheme;'
+    return:
+      type: <xref uid="office!Office.OfficeTheme:interface" />
+- name: type
+  uid: outlook!Office.OfficeThemeChangedEventArgs#type:member
+  package: outlook!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 `Office.EventType`。
+
+
+    \[[API 集：邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'type: "officeThemeChanged";'
+    return:
+      type: "\"officeThemeChanged\""
+metadata:
+  ms.openlocfilehash: 77ce61c10768d0ceec3b39fa300e2f2a0a5ca9c9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329220"
