--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivothierarchyupdatedata.yml
@@ -1,27 +1,34 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyUpdateData:interface'
-    summary: '一个用于更新 PivotHierarchy 对象上的数据的接口，可用于`pivotHierarchy.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotHierarchyUpdateData
-    fullName: Excel.Interfaces.PivotHierarchyUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotHierarchyUpdateData#name:member'
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyUpdateData#name:member'
-    summary: |-
-      PivotHierarchy 的名称。
+### YamlMime:TSType
+name: Excel.Interfaces.PivotHierarchyUpdateData
+uid: excel!Excel.Interfaces.PivotHierarchyUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotHierarchyUpdateData
+summary: 一个用于更新 PivotHierarchy 对象上的数据的接口，可用于 `pivotHierarchy.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: name
+  uid: excel!Excel.Interfaces.PivotHierarchyUpdateData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    PivotHierarchy 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: f3f123899e38035957fc497139495baf23cfb960
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330703"
