--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pivotitemupdatedata.yml
@@ -1,59 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData:interface'
-    summary: '一个用于更新 PivotItem 对象上的数据的接口，可用于`pivotItem.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotItemUpdateData
-    fullName: Excel.Interfaces.PivotItemUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotItemUpdateData#isExpanded:member'
-      - 'excel!Excel.Interfaces.PivotItemUpdateData#name:member'
-      - 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
-  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#isExpanded:member'
-    summary: |-
-      确定是展开项以显示子项还是折叠项并隐藏子项。
+### YamlMime:TSType
+name: Excel.Interfaces.PivotItemUpdateData
+uid: excel!Excel.Interfaces.PivotItemUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotItemUpdateData
+summary: 一个用于更新 PivotItem 对象上的数据的接口，可用于 `pivotItem.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: isExpanded
+  uid: excel!Excel.Interfaces.PivotItemUpdateData#isExpanded:member
+  package: excel!
+  fullName: isExpanded
+  summary: >-
+    确定是展开项以显示子项还是折叠项并隐藏子项。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: isExpanded
-    fullName: isExpanded
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'isExpanded?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#name:member'
-    summary: |-
-      PivotItem 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.PivotItemUpdateData#visible:member'
-    summary: |-
-      指定 PivotItem 是否可见。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'isExpanded?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.PivotItemUpdateData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    PivotItem 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: visible
+  uid: excel!Excel.Interfaces.PivotItemUpdateData#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定 PivotItem 是否可见。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: cdc2853b3a2fb20183433f626ad0a1e6a66e1a96
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330591"
