--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareasupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangeareasupdatedata.yml
@@ -1,64 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData:interface'
-    summary: '一个用于更新 RangeAreas 对象上的数据的接口，可用于`rangeAreas.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.RangeAreasUpdateData
-    fullName: Excel.Interfaces.RangeAreasUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeAreasUpdateData#dataValidation:member'
-      - 'excel!Excel.Interfaces.RangeAreasUpdateData#format:member'
-      - 'excel!Excel.Interfaces.RangeAreasUpdateData#style:member'
-  - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData#dataValidation:member'
-    summary: |-
-      返回 RangeAreas 中的所有区域的 dataValidation 对象。
+### YamlMime:TSType
+name: Excel.Interfaces.RangeAreasUpdateData
+uid: excel!Excel.Interfaces.RangeAreasUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeAreasUpdateData
+summary: 一个用于更新 RangeAreas 对象上的数据的接口，可用于 `rangeAreas.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: dataValidation
+  uid: excel!Excel.Interfaces.RangeAreasUpdateData#dataValidation:member
+  package: excel!
+  fullName: dataValidation
+  summary: >-
+    返回 RangeAreas 中的所有区域的 dataValidation 对象。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dataValidation
-    fullName: dataValidation
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dataValidation?: Excel.Interfaces.DataValidationUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.DataValidationUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData#format:member'
-    summary: |-
-      返回一个 RangeFormat 对象，封装 RangeAreas 对象中所有区域的字体、填充、边框、对齐方式和其他属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.RangeFormatUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeFormatUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.RangeAreasUpdateData#style:member'
-    summary: |-
-      表示此 RangeAreas 对象中的所有区域的样式。 如果单元格的样式不一致，则将返回 null。 对于自定义样式，将返回样式名称。 对于内置样式，将返回一个表示 BuiltInStyle 枚举中的值的字符串。
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'dataValidation?: Excel.Interfaces.DataValidationUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.DataValidationUpdateData:interface" />
+- name: format
+  uid: excel!Excel.Interfaces.RangeAreasUpdateData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    返回一个 RangeFormat 对象，封装 RangeAreas 对象中所有区域的字体、填充、边框、对齐方式和其他属性。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'excel!Excel.Interfaces.DataValidationUpdateData:interface'
-    name: Excel.Interfaces.DataValidationUpdateData
-  - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData:interface'
-    name: Excel.Interfaces.RangeFormatUpdateData
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.RangeFormatUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeFormatUpdateData:interface" />
+- name: style
+  uid: excel!Excel.Interfaces.RangeAreasUpdateData#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    表示此 RangeAreas 对象中的所有区域的样式。 如果单元格的样式不一致，则将返回 null。 对于自定义样式，将返回样式名称。 对于内置样式，将返回一个表示 BuiltInStyle 枚举中的值的字符串。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: f85bacc21e8555cfdadba1e76ed801293e6d0806
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330570"
