--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartaxistitleformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.chartaxistitleformatloadoptions.yml
@@ -1,64 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions:interface'
-    summary: |-
-      表示图表坐标轴标题格式。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartAxisTitleFormatLoadOptions
+uid: excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartAxisTitleFormatLoadOptions
+summary: >-
+  表示图表坐标轴标题格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartAxisTitleFormatLoadOptions
-    fullName: Excel.Interfaces.ChartAxisTitleFormatLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#border:member'
-      - 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#font:member'
-  - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#border:member'
-    summary: |-
-      指定图表坐标轴标题的边框格式，包括颜色、linestyle 和粗细。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: border
-    fullName: border
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'border?: Excel.Interfaces.ChartBorderLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#font:member'
-    summary: |-
-      指定图表轴标题的字体属性，例如字体名称、字体大小、颜色等图表轴标题对象的字体。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: border
+  uid: excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#border:member
+  package: excel!
+  fullName: border
+  summary: >-
+    指定图表坐标轴标题的边框格式，包括颜色、linestyle 和粗细。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: font
-    fullName: font
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'font?: Excel.Interfaces.ChartFontLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
-references:
-  - uid: 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
-    name: Excel.Interfaces.ChartBorderLoadOptions
-  - uid: 'excel!Excel.Interfaces.ChartFontLoadOptions:interface'
-    name: Excel.Interfaces.ChartFontLoadOptions
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'border?: Excel.Interfaces.ChartBorderLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartBorderLoadOptions:interface" />
+- name: font
+  uid: excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#font:member
+  package: excel!
+  fullName: font
+  summary: >-
+    指定图表轴标题的字体属性，例如字体名称、字体大小、颜色等图表轴标题对象的字体。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'font?: Excel.Interfaces.ChartFontLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartFontLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 8077d353b953d56aa7ac22ba95000643f098b0f9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330297"
