--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangeborderdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangeborderdata.yml
@@ -1,78 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData:interface'
-    summary: 描述通过调用返回的数据的接口`conditionalRangeBorder.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ConditionalRangeBorderData
-    fullName: Excel.Interfaces.ConditionalRangeBorderData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderData#color:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex:member'
-      - 'excel!Excel.Interfaces.ConditionalRangeBorderData#style:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#color:member'
-    summary: |-
-      代表 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalRangeBorderData
+uid: excel!Excel.Interfaces.ConditionalRangeBorderData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalRangeBorderData
+summary: 描述通过调用返回的数据的接口 `conditionalRangeBorder.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderData#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    代表 RRGGBB 格式的边框线颜色的 HTML 颜色代码 \# (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如 "橙色" ) 。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex:member'
-    summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: sideIndex
-    fullName: sideIndex
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'sideIndex?: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex~0:complex'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#style:member'
-    summary: |-
-      线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+- name: sideIndex
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex:member
+  package: excel!
+  fullName: sideIndex
+  summary: >-
+    指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: style
-    fullName: style
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'style?: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ConditionalRangeBorderData#style~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex~0:complex'
-    name: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
-    fullName: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
-    spec.typeScript:
-      - uid: 'excel!Excel.ConditionalRangeBorderIndex:enum'
-        name: Excel.ConditionalRangeBorderIndex
-        fullName: Excel.ConditionalRangeBorderIndex
-      - name: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"'
-        fullName: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"'
-  - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#style~0:complex'
-    name: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
-    fullName: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
-    spec.typeScript:
-      - uid: 'excel!Excel.ConditionalRangeBorderLineStyle:enum'
-        name: Excel.ConditionalRangeBorderLineStyle
-        fullName: Excel.ConditionalRangeBorderLineStyle
-      - name: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
-        fullName: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"'
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'sideIndex?: Excel.ConditionalRangeBorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight";'
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorderIndex:enum" /> | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight"
+- name: style
+  uid: excel!Excel.Interfaces.ConditionalRangeBorderData#style:member
+  package: excel!
+  fullName: style
+  summary: >-
+    线条样式的常量之一，指定边框的线条样式。 有关详细信息，请参阅 BorderLineStyle。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'style?: Excel.ConditionalRangeBorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot";'
+    return:
+      type: <xref uid="excel!Excel.ConditionalRangeBorderLineStyle:enum" /> | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot"
+metadata:
+  ms.openlocfilehash: aebe2466352446cab3102290201778a89208225d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49330276"
