--- a/docs/docs-ref-autogen/office/office/office.dialogoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialogoptions.yml
@@ -1,79 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.DialogOptions:interface'
-    summary: 提供有关如何显示对话框的选项。
-    name: Office.DialogOptions
-    fullName: Office.DialogOptions
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!Office.DialogOptions#asyncContext:member'
-      - 'office!Office.DialogOptions#displayInIframe:member'
-      - 'office!Office.DialogOptions#height:member'
-      - 'office!Office.DialogOptions#promptBeforeOpen:member'
-      - 'office!Office.DialogOptions#width:member'
-  - uid: 'office!Office.DialogOptions#asyncContext:member'
-    summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
-    name: asyncContext
-    fullName: asyncContext
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'asyncContext?: any'
-      return:
-        type:
-          - any
-  - uid: 'office!Office.DialogOptions#displayInIframe:member'
-    summary: 确定是否应在 IFrame 中显示对话框。 此设置仅适用于 web 上的 Office，并被其他平台忽略。 如果 false （默认值），对话框将显示为一个新的浏览器窗口（弹出窗口）。 对于无法在 IFrame 中显示的身份验证页建议使用此值。 如果为 true，则对话框将显示为带有 IFrame 的浮动覆盖。 对于用户体验和性能而言，这是最佳选择。
-    name: displayInIframe
-    fullName: displayInIframe
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'displayInIframe?: boolean'
-      return:
-        type:
-          - boolean
-  - uid: 'office!Office.DialogOptions#height:member'
-    summary: 以占当前显示器的百分比的形式，定义对话框的宽度。 默认值为 80%。 下限为 250px。
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: number,'
-      return:
-        type:
-          - number
-  - uid: 'office!Office.DialogOptions#promptBeforeOpen:member'
-    summary: |-
-      确定是否将向用户显示弹出窗口阻止对话框。 默认值为 true。
+### YamlMime:TSType
+name: Office.DialogOptions
+uid: office!Office.DialogOptions:interface
+package: office!
+fullName: Office.DialogOptions
+summary: 提供有关如何显示对话框的选项。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: asyncContext
+  uid: office!Office.DialogOptions#asyncContext:member
+  package: office!
+  fullName: asyncContext
+  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'asyncContext?: any'
+    return:
+      type: any
+- name: displayInIframe
+  uid: office!Office.DialogOptions#displayInIframe:member
+  package: office!
+  fullName: displayInIframe
+  summary: 确定是否应在 IFrame 中显示对话框。 此设置仅适用于 web 上的 Office，并被其他平台忽略。 如果为 false (默认) ，该对话框将显示为新的浏览器窗口 (弹出) 。 对于无法在 IFrame 中显示的身份验证页建议使用此值。 如果为 true，则对话框将显示为带有 IFrame 的浮动覆盖。 对于用户体验和性能而言，这是最佳选择。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'displayInIframe?: boolean'
+    return:
+      type: boolean
+- name: height
+  uid: office!Office.DialogOptions#height:member
+  package: office!
+  fullName: height
+  summary: 以占当前显示器的百分比的形式，定义对话框的宽度。 默认值为 80%。 下限为 250px。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: number,'
+    return:
+      type: number
+- name: promptBeforeOpen
+  uid: office!Office.DialogOptions#promptBeforeOpen:member
+  package: office!
+  fullName: promptBeforeOpen
+  summary: >-
+    确定是否将向用户显示弹出窗口阻止对话框。 默认值为 true。
 
-      `true` - 框架显示用于触发导航的弹出窗口，并避开浏览器的弹出窗口阻止程序。 `false` - 对话框不会显示，开发人员必须处理弹出窗口（通过提供用户界面项目来触发导航）。
-    name: promptBeforeOpen
-    fullName: promptBeforeOpen
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'promptBeforeOpen?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'office!Office.DialogOptions#width:member'
-    summary: 以占当前显示器的百分比的形式，定义对话框的高度。 默认值为 80%。 下限为 150px。
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: number,'
-      return:
-        type:
-          - number
+
+    `true` - 框架显示用于触发导航的弹出窗口，并避开浏览器的弹出窗口阻止程序。 `false` - 对话框不会显示，开发人员必须处理弹出窗口（通过提供用户界面项目来触发导航）。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'promptBeforeOpen?: boolean;'
+    return:
+      type: boolean
+- name: width
+  uid: office!Office.DialogOptions#width:member
+  package: office!
+  fullName: width
+  summary: 以占当前显示器的百分比的形式，定义对话框的高度。 默认值为 80%。 下限为 150px。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: number,'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: 609548d8e7ae3790b064a32afa3f9880760fccc0
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329563"
