--- a/docs/docs-ref-autogen/office/office/office.rangeformatconfiguration.yml
+++ b/docs/docs-ref-autogen/office/office/office.rangeformatconfiguration.yml
@@ -1,50 +1,42 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'office!Office.RangeFormatConfiguration:interface'
-    summary: 指定一个范围及其格式。
-    name: Office.RangeFormatConfiguration
-    fullName: Office.RangeFormatConfiguration
-    langs:
-      - typeScript
-    type: interface
-    package: office!
-    children:
-      - 'office!Office.RangeFormatConfiguration#cells:member'
-      - 'office!Office.RangeFormatConfiguration#format:member'
-  - uid: 'office!Office.RangeFormatConfiguration#cells:member'
-    summary: '指定区域。 使用的示例如下： "Office. 表枚举：全部"。 使用 RangeCoordinates 的示例： `{row: 3, column: 4}` 指定第四（从零开始）列中第三（从零开始）行中的单元格。'
-    name: cells
-    fullName: cells
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'cells: Office.Table | RangeCoordinates'
-      return:
-        type:
-          - 'office!Office.RangeFormatConfiguration#cells~0:complex'
-  - uid: 'office!Office.RangeFormatConfiguration#format:member'
-    summary: '将格式设置指定为键值对。 例如：`{borderColor: "white", fontStyle: "bold"}`'
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format: object'
-      return:
-        type:
-          - object
-references:
-  - uid: 'office!Office.RangeFormatConfiguration#cells~0:complex'
-    name: Office.Table | RangeCoordinates
-    fullName: Office.Table | Office.RangeCoordinates
-    spec.typeScript:
-      - uid: 'office!Office.Table:enum'
-        name: Office.Table
-        fullName: Office.Table
-      - name: ' | '
-        fullName: ' | '
-      - uid: 'office!Office.RangeCoordinates:interface'
-        name: RangeCoordinates
-        fullName: Office.RangeCoordinates
+### YamlMime:TSType
+name: Office.RangeFormatConfiguration
+uid: office!Office.RangeFormatConfiguration:interface
+package: office!
+fullName: Office.RangeFormatConfiguration
+summary: 指定一个范围及其格式。
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: cells
+  uid: office!Office.RangeFormatConfiguration#cells:member
+  package: office!
+  fullName: cells
+  summary: '指定区域。 使用的示例如下： "Office. 表枚举：全部"。 使用 RangeCoordinates 的示例： `{row: 3, column: 4}` 指定第四 (从零开始的) 列中的第三 () 行中的单元格。'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'cells: Office.Table | RangeCoordinates'
+    return:
+      type: <xref uid="office!Office.Table:enum" /> | <xref uid="office!Office.RangeCoordinates:interface" />
+- name: format
+  uid: office!Office.RangeFormatConfiguration#format:member
+  package: office!
+  fullName: format
+  summary: '将格式设置指定为键值对。 示例：`{borderColor: "white", fontStyle: "bold"}`'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format: object'
+    return:
+      type: object
+metadata:
+  ms.openlocfilehash: 2c5e41d7afe44e493564e6b68bfa1616526d65d4
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329500"
