--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.floatinginkloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.floatinginkloadoptions.yml
@@ -1,79 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface'
-    summary: |-
-      表示一组墨迹笔划。
+### YamlMime:TSType
+name: OneNote.Interfaces.FloatingInkLoadOptions
+uid: onenote!OneNote.Interfaces.FloatingInkLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.FloatingInkLoadOptions
+summary: >-
+  表示一组墨迹笔划。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.FloatingInkLoadOptions
-    fullName: OneNote.Interfaces.FloatingInkLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#inkStrokes:member'
-      - 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#pageContent:member'
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#id:member'
-    summary: |-
-      获取 FloatingInk 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#inkStrokes:member'
-    summary: |-
-      获取 FloatingInk 对象的笔划。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.FloatingInkLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.FloatingInkLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 FloatingInk 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: inkStrokes
-    fullName: inkStrokes
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'inkStrokes?: OneNote.Interfaces.InkStrokeCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.FloatingInkLoadOptions#pageContent:member'
-    summary: |-
-      获取 FloatingInk 对象的 PageContent 父级。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: pageContent
-    fullName: pageContent
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'pageContent?: OneNote.Interfaces.PageContentLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageContentLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.InkStrokeCollectionLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.PageContentLoadOptions:interface'
-    name: OneNote.Interfaces.PageContentLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: inkStrokes
+  uid: onenote!OneNote.Interfaces.FloatingInkLoadOptions#inkStrokes:member
+  package: onenote!
+  fullName: inkStrokes
+  summary: >-
+    获取 FloatingInk 对象的笔划。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'inkStrokes?: OneNote.Interfaces.InkStrokeCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkStrokeCollectionLoadOptions:interface" />
+- name: pageContent
+  uid: onenote!OneNote.Interfaces.FloatingInkLoadOptions#pageContent:member
+  package: onenote!
+  fullName: pageContent
+  summary: >-
+    获取 FloatingInk 对象的 PageContent 父级。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'pageContent?: OneNote.Interfaces.PageContentLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageContentLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 5f85298676e745e7b45efa9e6652f01c45529a64
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329444"
