--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisloadoptions.yml
@@ -1,61 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface'
-    summary: |-
-      表示一组给定墨迹笔划的墨迹分析数据。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisLoadOptions
+uid: onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisLoadOptions
+summary: >-
+  表示一组给定墨迹笔划的墨迹分析数据。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.InkAnalysisLoadOptions
-    fullName: OneNote.Interfaces.InkAnalysisLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions#page:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions#id:member'
-    summary: |-
-      获取 InkAnalysis 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions#page:member'
-    summary: |-
-      获取父页对象。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.InkAnalysisLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.InkAnalysisLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkAnalysis 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: page
-    fullName: page
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'page?: OneNote.Interfaces.PageLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.PageLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.PageLoadOptions:interface'
-    name: OneNote.Interfaces.PageLoadOptions
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: page
+  uid: onenote!OneNote.Interfaces.InkAnalysisLoadOptions#page:member
+  package: onenote!
+  fullName: page
+  summary: >-
+    获取父页对象。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'page?: OneNote.Interfaces.PageLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.PageLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 7157a6f94b6afb177b8f8f252474b58e4e78f243
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329430"
