--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysisparagraphloadoptions.yml
@@ -1,79 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface'
-    summary: |-
-      表示墨迹笔划形成的已识别段落的墨迹分析数据。
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisParagraphLoadOptions
+uid: onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisParagraphLoadOptions
+summary: >-
+  表示墨迹笔划形成的已识别段落的墨迹分析数据。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: OneNote.Interfaces.InkAnalysisParagraphLoadOptions
-    fullName: OneNote.Interfaces.InkAnalysisParagraphLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#$all:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#id:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#inkAnalysis:member'
-      - 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#lines:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#$all:member'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#id:member'
-    summary: |-
-      获取 InkAnalysisParagraph 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#inkAnalysis:member'
-    summary: |-
-      对父级 InkAnalysisPage 的引用。
+  \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#$all:member
+  package: onenote!
+  fullName: $all
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取 InkAnalysisParagraph 对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: inkAnalysis
-    fullName: inkAnalysis
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'inkAnalysis?: OneNote.Interfaces.InkAnalysisLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#lines:member'
-    summary: |-
-      获取此墨迹分析段落中的墨迹分析行。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: lines
-    fullName: lines
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'lines?: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions:interface'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface'
-    name: OneNote.Interfaces.InkAnalysisLoadOptions
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions:interface'
-    name: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: inkAnalysis
+  uid: onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#inkAnalysis:member
+  package: onenote!
+  fullName: inkAnalysis
+  summary: >-
+    对父级 InkAnalysisPage 的引用。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'inkAnalysis?: OneNote.Interfaces.InkAnalysisLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisLoadOptions:interface" />
+- name: lines
+  uid: onenote!OneNote.Interfaces.InkAnalysisParagraphLoadOptions#lines:member
+  package: onenote!
+  fullName: lines
+  summary: >-
+    获取此墨迹分析段落中的墨迹分析行。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'lines?: OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisLineCollectionLoadOptions:interface" />
+metadata:
+  ms.openlocfilehash: 422a46589d898c469142641453f04e351bf4998b
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329423"
