--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysiswordcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkanalysiswordcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionUpdateData:interface'
-    summary: '一个用于更新 InkAnalysisWordCollection 对象上的数据的接口，可用于 "inkAnalysisWordCollection （<!-- -->{ ... }<!-- -->)".'
-    name: OneNote.Interfaces.InkAnalysisWordCollectionUpdateData
-    fullName: OneNote.Interfaces.InkAnalysisWordCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionUpdateData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.InkAnalysisWordData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordCollectionUpdateData#items~0:complex'
-    name: 'OneNote.Interfaces.InkAnalysisWordData[]'
-    fullName: 'OneNote.Interfaces.InkAnalysisWordData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.InkAnalysisWordData:interface'
-        name: OneNote.Interfaces.InkAnalysisWordData
-        fullName: OneNote.Interfaces.InkAnalysisWordData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.InkAnalysisWordCollectionUpdateData
+uid: onenote!OneNote.Interfaces.InkAnalysisWordCollectionUpdateData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkAnalysisWordCollectionUpdateData
+summary: 用于更新 InkAnalysisWordCollection 对象上的数据的接口，用于在 "inkAnalysisWordCollection ( 中使用<!-- -->{ ... }<!-- -->)".
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.InkAnalysisWordCollectionUpdateData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.InkAnalysisWordData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkAnalysisWordData:interface" />[]
+metadata:
+  ms.openlocfilehash: 9d06fde8b8d3aaebfad200144227d693efe3c1bc
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329353"
