--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkwordcollectiondata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.inkwordcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.InkWordCollectionData:interface'
-    summary: 描述通过调用 "inkWordCollection （）" 返回的数据的接口。
-    name: OneNote.Interfaces.InkWordCollectionData
-    fullName: OneNote.Interfaces.InkWordCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.InkWordCollectionData#items:member'
-  - uid: 'onenote!OneNote.Interfaces.InkWordCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: OneNote.Interfaces.InkWordData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.InkWordCollectionData#items~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.InkWordCollectionData#items~0:complex'
-    name: 'OneNote.Interfaces.InkWordData[]'
-    fullName: 'OneNote.Interfaces.InkWordData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.InkWordData:interface'
-        name: OneNote.Interfaces.InkWordData
-        fullName: OneNote.Interfaces.InkWordData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: OneNote.Interfaces.InkWordCollectionData
+uid: onenote!OneNote.Interfaces.InkWordCollectionData:interface
+package: onenote!
+fullName: OneNote.Interfaces.InkWordCollectionData
+summary: '一个接口，该接口描述通过调用 "inkWordCollection ( # A1" 返回的数据。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: onenote!OneNote.Interfaces.InkWordCollectionData#items:member
+  package: onenote!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: OneNote.Interfaces.InkWordData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkWordData:interface" />[]
+metadata:
+  ms.openlocfilehash: 1517ceb09aba4e73da255d54baf73743c17e6450
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329297"
