--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.paragraphdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.paragraphdata.yml
@@ -1,157 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData:interface'
-    summary: 描述通过调用 "toJSON （）" 返回的数据的接口。
-    name: OneNote.Interfaces.ParagraphData
-    fullName: OneNote.Interfaces.ParagraphData
-    langs:
-      - typeScript
-    type: interface
-    package: onenote!
-    children:
-      - 'onenote!OneNote.Interfaces.ParagraphData#id:member'
-      - 'onenote!OneNote.Interfaces.ParagraphData#image:member'
-      - 'onenote!OneNote.Interfaces.ParagraphData#inkWords:member'
-      - 'onenote!OneNote.Interfaces.ParagraphData#paragraphs:member'
-      - 'onenote!OneNote.Interfaces.ParagraphData#richText:member'
-      - 'onenote!OneNote.Interfaces.ParagraphData#table:member'
-      - 'onenote!OneNote.Interfaces.ParagraphData#type:member'
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#id:member'
-    summary: |-
-      获取段落对象的 ID。 只读。
+### YamlMime:TSType
+name: OneNote.Interfaces.ParagraphData
+uid: onenote!OneNote.Interfaces.ParagraphData:interface
+package: onenote!
+fullName: OneNote.Interfaces.ParagraphData
+summary: '描述通过调用 "toJSON ( # A1" 返回的数据的接口。'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: id
+  uid: onenote!OneNote.Interfaces.ParagraphData#id:member
+  package: onenote!
+  fullName: id
+  summary: >-
+    获取段落对象的 ID。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#image:member'
-    summary: |-
-      获取 Paragraph 中的 Image 对象。 如果 ParagraphType 不是 Image，则引发异常。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: image
-    fullName: image
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'image?: OneNote.Interfaces.ImageData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ImageData:interface'
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#inkWords:member'
-    summary: |-
-      获取 Paragraph 中的 Ink 集合。 如果 ParagraphType 不为 Ink，则引发异常。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: image
+  uid: onenote!OneNote.Interfaces.ParagraphData#image:member
+  package: onenote!
+  fullName: image
+  summary: >-
+    获取 Paragraph 中的 Image 对象。 如果 ParagraphType 不是 Image，则引发异常。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: inkWords
-    fullName: inkWords
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'inkWords?: OneNote.Interfaces.InkWordData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphData#inkWords~0:complex'
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#paragraphs:member'
-    summary: |-
-      此段落下的段落集合。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: paragraphs
-    fullName: paragraphs
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'paragraphs?: OneNote.Interfaces.ParagraphData[];'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphData#paragraphs~0:complex'
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#richText:member'
-    summary: |-
-      获取 Paragraph 中的 RichText 对象。 如果 ParagraphType 不为 RichText，则引发异常。 只读
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'image?: OneNote.Interfaces.ImageData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ImageData:interface" />
+- name: inkWords
+  uid: onenote!OneNote.Interfaces.ParagraphData#inkWords:member
+  package: onenote!
+  fullName: inkWords
+  summary: >-
+    获取 Paragraph 中的 Ink 集合。 如果 ParagraphType 不为 Ink，则引发异常。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: richText
-    fullName: richText
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'richText?: OneNote.Interfaces.RichTextData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.RichTextData:interface'
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#table:member'
-    summary: |-
-      获取 Paragraph 中的 Table 对象。 如果 ParagraphType 不为 Table，则引发异常。 只读。
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: table
-    fullName: table
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'table?: OneNote.Interfaces.TableData;'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.TableData:interface'
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#type:member'
-    summary: |-
-      获取 Paragraph 对象的类型。 只读。
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'inkWords?: OneNote.Interfaces.InkWordData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.InkWordData:interface" />[]
+- name: paragraphs
+  uid: onenote!OneNote.Interfaces.ParagraphData#paragraphs:member
+  package: onenote!
+  fullName: paragraphs
+  summary: >-
+    此段落下的段落集合。 只读
 
-      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type?: OneNote.ParagraphType | "RichText" | "Image" | "Table" | "Ink" | "Other";'
-      return:
-        type:
-          - 'onenote!OneNote.Interfaces.ParagraphData#type~0:complex'
-references:
-  - uid: 'onenote!OneNote.Interfaces.ImageData:interface'
-    name: OneNote.Interfaces.ImageData
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#inkWords~0:complex'
-    name: 'OneNote.Interfaces.InkWordData[]'
-    fullName: 'OneNote.Interfaces.InkWordData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.InkWordData:interface'
-        name: OneNote.Interfaces.InkWordData
-        fullName: OneNote.Interfaces.InkWordData
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#paragraphs~0:complex'
-    name: 'OneNote.Interfaces.ParagraphData[]'
-    fullName: 'OneNote.Interfaces.ParagraphData[]'
-    spec.typeScript:
-      - uid: 'onenote!OneNote.Interfaces.ParagraphData:interface'
-        name: OneNote.Interfaces.ParagraphData
-        fullName: OneNote.Interfaces.ParagraphData
-      - name: '[]'
-        fullName: '[]'
-  - uid: 'onenote!OneNote.Interfaces.RichTextData:interface'
-    name: OneNote.Interfaces.RichTextData
-  - uid: 'onenote!OneNote.Interfaces.TableData:interface'
-    name: OneNote.Interfaces.TableData
-  - uid: 'onenote!OneNote.Interfaces.ParagraphData#type~0:complex'
-    name: OneNote.ParagraphType | "RichText" | "Image" | "Table" | "Ink" | "Other"
-    fullName: OneNote.ParagraphType | "RichText" | "Image" | "Table" | "Ink" | "Other"
-    spec.typeScript:
-      - uid: 'onenote!OneNote.ParagraphType:enum'
-        name: OneNote.ParagraphType
-        fullName: OneNote.ParagraphType
-      - name: ' | "RichText" | "Image" | "Table" | "Ink" | "Other"'
-        fullName: ' | "RichText" | "Image" | "Table" | "Ink" | "Other"'
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'paragraphs?: OneNote.Interfaces.ParagraphData[];'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.ParagraphData:interface" />[]
+- name: richText
+  uid: onenote!OneNote.Interfaces.ParagraphData#richText:member
+  package: onenote!
+  fullName: richText
+  summary: >-
+    获取 Paragraph 中的 RichText 对象。 如果 ParagraphType 不为 RichText，则引发异常。 只读
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'richText?: OneNote.Interfaces.RichTextData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.RichTextData:interface" />
+- name: table
+  uid: onenote!OneNote.Interfaces.ParagraphData#table:member
+  package: onenote!
+  fullName: table
+  summary: >-
+    获取 Paragraph 中的 Table 对象。 如果 ParagraphType 不为 Table，则引发异常。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'table?: OneNote.Interfaces.TableData;'
+    return:
+      type: <xref uid="onenote!OneNote.Interfaces.TableData:interface" />
+- name: type
+  uid: onenote!OneNote.Interfaces.ParagraphData#type:member
+  package: onenote!
+  fullName: type
+  summary: >-
+    获取 Paragraph 对象的类型。 只读。
+
+
+    \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type?: OneNote.ParagraphType | "RichText" | "Image" | "Table" | "Ink" | "Other";'
+    return:
+      type: <xref uid="onenote!OneNote.ParagraphType:enum" /> | "RichText" | "Image" | "Table" | "Ink" | "Other"
+metadata:
+  ms.openlocfilehash: 394e28097430572c4652787453b625294f7e6008
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329290"
