--- a/docs/docs-ref-autogen/outlook_1_1/outlook/office.tasksuggestion.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/outlook/office.tasksuggestion.yml
@@ -1,67 +1,71 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'outlook!Office.TaskSuggestion:interface'
-    summary: |-
-      表示项目中标识的建议任务。 仅限阅读模式。
+### YamlMime:TSType
+name: Office.TaskSuggestion
+uid: outlook!Office.TaskSuggestion:interface
+package: outlook!
+fullName: Office.TaskSuggestion
+summary: >-
+  表示项目中标识的建议任务。 仅限阅读模式。
 
-      在电子邮件中建议的任务列表在对 `taskSuggestions` [Entities](xref:outlook!Office.Entities:interface) `getEntities` 活动项调用 or 方法时返回的实体对象的属性中返回 `getEntitiesByType` 。
-    remarks: |-
-      **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- --> **：`ReadItem`
 
-      **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- --> **：读取
+  在电子邮件中建议的任务列表在对 `taskSuggestions` [Entities](xref:outlook!Office.Entities:interface) `getEntities` 活动项调用 or 方法时返回的实体对象的属性中返回 `getEntitiesByType` 。
+remarks: >-
+  **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
-      #### <a name="examples"></a>示例
 
-      ```javascript
-      var item = Office.context.mailbox.item;
-      // Get an array of strings that represent task suggestions in the current item's body.
-      var taskSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.TaskSuggestion);
-      console.log("There are " + taskSuggestions.length + " task suggestions.")
-      taskSuggestions.forEach(function (taskSuggestion) {
-          console.log("Assignees: " + JSON.stringify(taskSuggestion.assignees));
-          console.log("Task: " + JSON.stringify(taskSuggestion.taskString));
-      });
-      ```
-    name: Office.TaskSuggestion
-    fullName: Office.TaskSuggestion
-    langs:
-      - typeScript
-    type: interface
-    package: outlook!
-    children:
-      - 'outlook!Office.TaskSuggestion#assignees:member'
-      - 'outlook!Office.TaskSuggestion#taskString:member'
-  - uid: 'outlook!Office.TaskSuggestion#assignees:member'
-    summary: 获取应向其分配建议任务的用户。
-    name: assignees
-    fullName: assignees
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'assignees: EmailUser[];'
-      return:
-        type:
-          - 'outlook!Office.TaskSuggestion#assignees~0:complex'
-  - uid: 'outlook!Office.TaskSuggestion#taskString:member'
-    summary: 获取标识为任务建议的项的文本。
-    name: taskString
-    fullName: taskString
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'taskString: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'outlook!Office.TaskSuggestion#assignees~0:complex'
-    name: 'EmailUser[]'
-    fullName: 'Office.EmailUser[]'
-    spec.typeScript:
-      - uid: 'outlook!Office.EmailUser:interface'
-        name: EmailUser
-        fullName: Office.EmailUser
-      - name: '[]'
-        fullName: '[]'
+  **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：读取
+
+
+  #### <a name="examples"></a>示例
+
+
+  ```javascript
+
+  var item = Office.context.mailbox.item;
+
+  // Get an array of strings that represent task suggestions in the current item's body.
+
+  var taskSuggestions = item.getEntitiesByType(Office.MailboxEnums.EntityType.TaskSuggestion);
+
+  console.log("There are " + taskSuggestions.length + " task suggestions.")
+
+  taskSuggestions.forEach(function (taskSuggestion) {
+      console.log("Assignees: " + JSON.stringify(taskSuggestion.assignees));
+      console.log("Task: " + JSON.stringify(taskSuggestion.taskString));
+  });
+
+  ```
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: assignees
+  uid: outlook!Office.TaskSuggestion#assignees:member
+  package: outlook!
+  fullName: assignees
+  summary: 获取应向其分配建议任务的用户。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'assignees: EmailUser[];'
+    return:
+      type: <xref uid="outlook!Office.EmailUser:interface" />[]
+- name: taskString
+  uid: outlook!Office.TaskSuggestion#taskString:member
+  package: outlook!
+  fullName: taskString
+  summary: 获取标识为任务建议的项的文本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'taskString: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 361842eedd1c5de102119195dec05d79fd2bbbce
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49329171"
